# african-ai-agent-hub

./: .gitignore  00-PROJECT-MASTER-OLD-LESSONS.md  02-Accounts-Setup.md  03-Resources-Library.md  Daily-Progress-Log.md  PROJECT-TRACKER.md  README.md  Sprint-1-Tracker.md
Milestones/: Phase-1-Foundation.md  Phase-2-3-4-Outlines.md
Projects/: Project-1-Kenyan-Hiring-Agent.md  Project-2-Agricultural-Extension-Agent.md  Project-2-Crop-Doctor.md  Project-3-MPesa-SME-Accounting-Agent.md  Project-3-MPesa-Workflow-Agent.md
agent-1-kenyan-hiring/: README.md  pyproject.toml  requirements.txt  streamlit_app.py
agent-1-kenyan-hiring/.streamlit/: config.toml
agent-1-kenyan-hiring/data/sample_cvs/: sample_1_john_kamau.txt
agent-1-kenyan-hiring/data/sample_job_descriptions/: junior_dev.txt
agent-1-kenyan-hiring/src/: agent.py  hello_claude.py
agent-1-kenyan-hiring/src/agents/: base.py  cv_extractor.py  reporter.py  scorer.py
agent-2-mpesa-accounting/: README.md
agent-3-crop-doctor/: README.md
docs/: Project-1-Kenyan-Hiring-Agent.md  Sprint-1-Tracker.md
