[project]
name = "kenyan-hiring-agent"
version = "0.1.0"
description = "AI-powered CV screening agent built for the Kenyan job market"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",       # Gemini 3.5 Flash SDK
    "groq>=0.9.0",               # Groq SDK for Llama 3 fallback
    "python-dotenv>=1.0.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "rich>=13.0.0",            # pretty terminal output
    "streamlit>=1.30.0",         # Web UI framework
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]
